--- a/Using-Expressjs/views/shop/product-list.ejs
+++ b/Using-Expressjs/views/shop/product-list.ejs
@@ -1,8 +1,8 @@
-<%- include("includes/head") %>
+<%- include("../includes/head") %>
     </head>
 
     <body>
-        <%- include("includes/navigation") %>
+        <%- include("../includes/navigation") %>
 
             <main>
                 <h1>My Products</h1>
@@ -17,18 +17,20 @@
                                     </h1>
                                 </header>
                                 <div class="card__image">
-                                    <img src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png"
-                                        alt="A Book">
+                                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">
-                                    <h2 class="product__price">$19.99</h2>
-                                    <p class="product__description">A very interesting book about so many even more
-                                        interesting
-                                        things!
+                                    <h2 class="product__price">
+                                        $<%= product.price %>
+                                    </h2>
+                                    <p class="product__description">
+                                        <%= product.description %>
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <button class="btn">Add to Cart</button>
+                                    <form action="/add-to-cart" method="post">
+                                        <button type="submit" class="btn">Add to Cart</button>
+                                    </form>
                                 </div>
                             </article>
                             <% } %>
