--- a/Using-Expressjs/views/shop/product-list.ejs
+++ b/Using-Expressjs/views/shop/product-list.ejs
@@ -28,9 +28,8 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <form action="/add-to-cart" method="post">
-                                        <button type="submit" class="btn">Add to Cart</button>
-                                    </form>
+                                    <a href="/product/<%= product.id %>" class="btn">Details</a>
+                                    <%- include("../includes/cart-form", {product: product}) %>
                                 </div>
                             </article>
                             <% } %>
