--- a/Using-Expressjs/views/admin/products.ejs
+++ b/Using-Expressjs/views/admin/products.ejs
@@ -7,9 +7,9 @@
             <main>
                 <h1>My Products</h1>
                 <p>List of all the products...</p>
-                <% if(prods.length> 0) { %>
+                <% if (prods.length> 0) { %>
                     <div class="grid">
-                        <% for (let product of prods){ %>
+                        <% for (let product of prods) { %>
                             <article class="card product-item">
                                 <header class="card__header">
                                     <h1 class="product__title">
@@ -28,16 +28,14 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a class="btn" href="/admin/edit-product">Edit</a>
+                                    <a class="btn" href="/admin/edit-product/<%= product.id %>?edit=true">Edit</a>
                                     <form action="/admin/delete-product" method="post">
+                                        <input type="hidden" name="productId" value="<%= product.id %>">
                                         <button type="submit" class="btn">Delete</button>
                                     </form>
                                 </div>
                             </article>
                             <% } %>
-                    </div>
-                    <div class="remove-product">
-                        <a href="/admin/remove-product" class="remove-product__link">Remove Product</a>
                     </div>
                     <% } else { %>
                         <h1>No item added yet!</h1>
