Display cart products and refine the update product effects

--- a/Using-Expressjs/views/shop/cart.ejs
+++ b/Using-Expressjs/views/shop/cart.ejs
@@ -4,7 +4,41 @@
     <body>
         <%- include("../includes/navigation") %>
             <main>
-                <h1>The <%= pageTitle %> page will display here!</h1>
+                <% if (cartProducts.length> 0) { %>
+                    <div class="grid">
+                        <% for (let product of cartProducts){ %>
+                            <article class="card product-item">
+                                <header class="card__header">
+                                    <h1 class="product__title">
+                                        <%= product.title %>
+                                    </h1>
+                                </header>
+                                <div class="card__image">
+                                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                                </div>
+                                <div class="card__content">
+                                    <h2 class="product__price">
+                                        $<%= product.price %>
+                                    </h2>
+                                    <h3 class="product__qty">
+                                        <%= product.qty %> of this!
+                                    </h3>
+                                    <p class="product__description">
+                                        <%= product.description %>
+                                    </p>
+                                </div>
+                                <!-- <div class="card__actions">
+                                    <a href="/product/<%= product.id %>" class="btn">Details</a>
+                                    <%- include("../includes/cart-form", {product: product}) %>
+                                </div> -->
+                            </article>
+                            <% } %>
+                    </div>
+                    <h1>Total price: <%= totalPrice %>
+                    </h1>
+                    <% } else { %>
+                        <h1>There is no product in your cart, add product(s) to cart to see them here.</h1>
+                        <% } %>
             </main>
     </body>
 
