--- a/Using-Expressjs/public/css/product.css
+++ b/Using-Expressjs/public/css/product.css
@@ -14,7 +14,8 @@
     text-align: center;
 }
 
-.product__price {
+.product__price,
+.product__qty {
     text-align: center;
     color: #4d4d4d;
     margin-bottom: 0.5rem;
