Implement the order functionality and display the order page

--- a/Using-Expressjs/public/css/product.css
+++ b/Using-Expressjs/public/css/product.css
@@ -2,11 +2,13 @@
     width: 20rem;
     max-width: 90%;
     margin: auto;
+    display: block;
 }
 
 .product-item {
     width: 20rem;
     max-width: 95%;
+    margin: 1rem;
 }
 
 .product__title {
@@ -14,8 +16,7 @@
     text-align: center;
 }
 
-.product__price,
-.product__qty {
+.product__price {
     text-align: center;
     color: #4d4d4d;
     margin-bottom: 0.5rem;
