--- a/Using-Expressjs/views/shop/orders.ejs
+++ b/Using-Expressjs/views/shop/orders.ejs
@@ -4,7 +4,44 @@
     <body>
         <%- include("../includes/navigation") %>
             <main>
-                <h1>The <%= pageTitle %> page will display here!</h1>
+                <% if (orders.length> 0) { %>
+                    <div class="grid">
+                        <% for (let order of orders){ %>
+                            <% order.products.forEach(product=> { %>
+                                <article class="card product-item">
+                                    <header class="card__header">
+                                        <h1 class="product__title">
+                                            <%= product.title %>
+                                        </h1>
+                                    </header>
+                                    <div class="card__image">
+                                        <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                                    </div>
+                                    <div class="card__content">
+                                        <h2 class="product__price">
+                                            $<%= product.price %>
+                                        </h2>
+                                        <h3 class="product__qty">
+                                            <%= product.orderItem.quantity %> of this!
+                                        </h3>
+                                        <p class="product__description">
+                                            <%= product.description %>
+                                        </p>
+                                    </div>
+                                    <div class="card__actions">
+                                        <form action="/order-delete-item" method="post">
+                                            <input type="hidden" name="productId" value="<%= product.id %>">
+                                            <input type="hidden" name="productPrice" value="<%= product.price %>">
+                                            <button type="submit" class="btn">Delete</button>
+                                        </form>
+                                    </div>
+                                </article>
+                                <% }) %>
+                                    <% } %>
+                    </div>
+                    <% } else { %>
+                        <h1>You have made no order yet, please make an order.</h1>
+                        <% } %>
             </main>
     </body>
 
