--- a/Using-Expressjs/views/admin/products.ejs
+++ b/Using-Expressjs/views/admin/products.ejs
@@ -28,9 +28,9 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a class="btn" href="/admin/edit-product/<%= product.id %>?edit=true">Edit</a>
+                                    <a class="btn" href="/admin/edit-product/<%= product._id %>?edit=true">Edit</a>
                                     <form action="/admin/delete-product" method="post">
-                                        <input type="hidden" name="productId" value="<%= product.id %>">
+                                        <input type="hidden" name="productId" value="<%= product._id %>">
                                         <button type="submit" class="btn">Delete</button>
                                     </form>
                                 </div>
