--- a/Using-Expressjs/views/shop/product-list.ejs
+++ b/Using-Expressjs/views/shop/product-list.ejs
@@ -28,7 +28,7 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/product/<%= product.id %>" class="btn">Details</a>
+                                    <a href="/product/<%= product._id %>" class="btn">Details</a>
                                     <%- include("../includes/cart-form", {product: product}) %>
                                 </div>
                             </article>
