--- a/Using-Expressjs/views/shop/cart.ejs
+++ b/Using-Expressjs/views/shop/cart.ejs
@@ -21,7 +21,7 @@
                                         $<%= product.price %>
                                     </h2>
                                     <h3 class="product__qty">
-                                        <%= product.cartItem.quantity %> of this!
+                                        <%= product.quantity %> of this!
                                     </h3>
                                     <p class="product__description">
                                         <%= product.description %>
@@ -29,7 +29,7 @@
                                 </div>
                                 <div class="card__actions">
                                     <form action="/cart-delete-item" method="post">
-                                        <input type="hidden" name="productId" value="<%= product.id %>">
+                                        <input type="hidden" name="productId" value="<%= product._id %>">
                                         <input type="hidden" name="productPrice" value="<%= product.price %>">
                                         <button type="submit" class="btn">Delete</button>
                                     </form>
