--- a/Using-Expressjs/views/shop/orders.ejs
+++ b/Using-Expressjs/views/shop/orders.ejs
@@ -7,7 +7,7 @@
                 <% if (orders.length> 0) { %>
                     <div class="grid">
                         <% for (let order of orders){ %>
-                            <% order.products.forEach(product=> { %>
+                            <% order.items.forEach(product=> { %>
                                 <article class="card product-item">
                                     <header class="card__header">
                                         <h1 class="product__title">
@@ -22,7 +22,7 @@
                                             $<%= product.price %>
                                         </h2>
                                         <h3 class="product__qty">
-                                            <%= product.orderItem.quantity %> of this!
+                                            <%= product.quantity %> of this!
                                         </h3>
                                         <p class="product__description">
                                             <%= product.description %>
@@ -30,7 +30,7 @@
                                     </div>
                                     <div class="card__actions">
                                         <form action="/order-delete-item" method="post">
-                                            <input type="hidden" name="productId" value="<%= product.id %>">
+                                            <input type="hidden" name="productId" value="<%= product._id %>">
                                             <input type="hidden" name="productPrice" value="<%= product.price %>">
                                             <button type="submit" class="btn">Delete</button>
                                         </form>
