--- a/Using-Expressjs/views/shop/cart.ejs
+++ b/Using-Expressjs/views/shop/cart.ejs
@@ -10,27 +10,27 @@
                             <article class="card product-item">
                                 <header class="card__header">
                                     <h1 class="product__title">
-                                        <%= product.title %>
+                                        <%= product.productId.title %>
                                     </h1>
                                 </header>
                                 <div class="card__image">
-                                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                                    <img src="<%= product.productId.imageUrl %>" alt="<%= product.productId.title %>">
                                 </div>
                                 <div class="card__content">
                                     <h2 class="product__price">
-                                        $<%= product.price %>
+                                        $<%= product.productId.price %>
                                     </h2>
                                     <h3 class="product__qty">
                                         <%= product.quantity %> of this!
                                     </h3>
                                     <p class="product__description">
-                                        <%= product.description %>
+                                        <%= product.productId.description %>
                                     </p>
                                 </div>
                                 <div class="card__actions">
                                     <form action="/cart-delete-item" method="post">
-                                        <input type="hidden" name="productId" value="<%= product._id %>">
-                                        <input type="hidden" name="productPrice" value="<%= product.price %>">
+                                        <input type="hidden" name="productId" value="<%= product.productId._id %>">
+                                        <input type="hidden" name="productPrice" value="<%= product.productId.price %>">
                                         <button type="submit" class="btn">Delete</button>
                                     </form>
                                 </div>
