--- a/Using-Expressjs/views/shop/orders.ejs
+++ b/Using-Expressjs/views/shop/orders.ejs
@@ -5,39 +5,42 @@
         <%- include("../includes/navigation") %>
             <main>
                 <% if (orders.length> 0) { %>
-                    <div class="grid">
+                    <div>
                         <% for (let order of orders){ %>
-                            <% order.items.forEach(product=> { %>
-                                <article class="card product-item">
-                                    <header class="card__header">
-                                        <h1 class="product__title">
-                                            <%= product.title %>
-                                        </h1>
-                                    </header>
-                                    <div class="card__image">
-                                        <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
-                                    </div>
-                                    <div class="card__content">
-                                        <h2 class="product__price">
-                                            $<%= product.price %>
-                                        </h2>
-                                        <h3 class="product__qty">
-                                            <%= product.quantity %> of this!
-                                        </h3>
-                                        <p class="product__description">
-                                            <%= product.description %>
-                                        </p>
-                                    </div>
-                                    <div class="card__actions">
-                                        <form action="/order-delete-item" method="post">
-                                            <input type="hidden" name="productId" value="<%= product._id %>">
-                                            <input type="hidden" name="productPrice" value="<%= product.price %>">
-                                            <button type="submit" class="btn">Delete</button>
-                                        </form>
-                                    </div>
-                                </article>
-                                <% }) %>
-                                    <% } %>
+                            <div class="grid">
+                                <% order.products.forEach(product=> { %>
+                                    <article class="card product-item">
+                                        <header class="card__header">
+                                            <h1 class="product__title">
+                                                <%= product.product.title %>
+                                            </h1>
+                                        </header>
+                                        <div class="card__image">
+                                            <img src="<%= product.product.imageUrl %>" alt="<%= product.title %>">
+                                        </div>
+                                        <div class="card__content">
+                                            <h2 class="product__price">
+                                                $<%= product.product.price %>
+                                            </h2>
+                                            <h3 class="product__qty">
+                                                <%= product.quantity %> of this!
+                                            </h3>
+                                            <p class="product__description">
+                                                <%= product.product.description %>
+                                            </p>
+                                        </div>
+
+                                    </article>
+                                    <% }) %>
+                            </div>
+                            <hr>
+                            <div class="card__actions">
+                                <form action="/order-delete-item" method="post">
+                                    <input type="hidden" name="orderId" value="<%= order._id %>">
+                                    <button type="submit" class="btn">Delete</button>
+                                </form>
+                            </div>
+                            <% } %>
                     </div>
                     <% } else { %>
                         <h1>You have made no order yet, please make an order.</h1>
