--- a/Using-Expressjs/public/css/main.css
+++ b/Using-Expressjs/public/css/main.css
@@ -8,6 +8,8 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    background-color: #121212;
+    color: white;
 }
 
 main {
@@ -42,8 +44,10 @@ form {
 
 .main-header__nav {
     height: 100%;
-    display: none;
+    width: 100%;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .main-header__item-list {
@@ -58,17 +62,24 @@ form {
     padding: 0;
 }
 
-.main-header__item a {
+.main-header__item a,
+.main-header__item button {
+    font: inherit;
+    background: transparent;
+    border: none;
     text-decoration: none;
     color: white;
+    cursor: pointer;
 }
 
 .main-header__item a:hover,
 .main-header__item a:active,
-.main-header__item a.active {
+.main-header__item a.active,
+.main-header__item button:hover,
+.main-header__item button:active {
     color: #ffeb3b;
     text-decoration: underline;
-}   
+}
 
 .mobile-nav {
     width: 30rem;
@@ -194,8 +205,8 @@ form {
     text-decoration: none;
     font: inherit;
     border: 1px solid #00695c;
-    color: #00695c;
-    background: white;
+    color: #017568;
+    background: inherit;
     border-radius: 3px;
     cursor: pointer;
 }
