--- a/Using-Expressjs/views/auth/login.ejs
+++ b/Using-Expressjs/views/auth/login.ejs
@@ -1,12 +1,22 @@
-<%- include("../includes/head") %>
+<%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="/css/auth.css">
     </head>
 
     <body>
-        <%- include("../includes/navigation") %>
+        <%- include('../includes/navigation.ejs') %>
 
             <main>
-                <h1>Login page.</h1>
+                <form class="login-form" action="/login" method="POST">
+                    <div class="form-control">
+                        <label for="email">E-Mail</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                    <div class="form-control">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" id="password">
+                    </div>
+                    <button class="btn" type="submit">Login</button>
+                </form>
             </main>
-    </body>
-
-    </html>
+            <%- include('../includes/end.ejs') %>
