--- a/Using-Expressjs/views/includes/navigation.ejs
+++ b/Using-Expressjs/views/includes/navigation.ejs
@@ -15,7 +15,7 @@
             <li class="main-header__item">
                 <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
             </li>
-            <% if (isAuthenticated==="true" ) { %>
+            <% if (isAuthenticated===true) { %>
                 <li class="main-header__item">
                     <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add
                         Product
@@ -28,7 +28,7 @@
                 <% } %>
         </ul>
         <ul class="main-header__item-list">
-            <% if (isAuthenticated==="true" ) { %>
+            <% if (isAuthenticated===true ) { %>
                 <li class="main-header__item">
                     <a class="<%= path === '/logout' ? 'active' : '' %>" href="/logout">Logout</a>
                 </li>
