--- a/Using-Expressjs/views/includes/navigation.ejs
+++ b/Using-Expressjs/views/includes/navigation.ejs
@@ -30,7 +30,9 @@
         <ul class="main-header__item-list">
             <% if (isAuthenticated===true ) { %>
                 <li class="main-header__item">
-                    <a class="<%= path === '/logout' ? 'active' : '' %>" href="/logout">Logout</a>
+                    <form action="/logout" method="post">
+                        <button type="submit">Logout</button>
+                    </form>
                 </li>
                 <% } else { %>
                     <li class="main-header__item">
