--- a/Using-Expressjs/views/includes/head.ejs
+++ b/Using-Expressjs/views/includes/head.ejs
@@ -8,6 +8,7 @@
     <title>
         <%= pageTitle %>
     </title>
+    <link rel="icon" href="/Using-Expressjs/public/assets/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/product.css">
