--- a/Using-Expressjs/views/shop/product-detail.ejs
+++ b/Using-Expressjs/views/shop/product-detail.ejs
@@ -27,7 +27,9 @@
                             </p>
                         </div>
                         <div class="card__actions">
-                            <%- include("../includes/cart-form") %>
+                            <% if (isAuthenticated) { %>
+                                <%- include("../includes/cart-form") %>
+                                    <% } %>
                         </div>
                     </article>
                 </div>
