--- a/Using-Expressjs/views/shop/index.ejs
+++ b/Using-Expressjs/views/shop/index.ejs
@@ -5,37 +5,42 @@
         <%- include("../includes/navigation") %>
 
             <main>
-                <h1>Products available in shop.</h1>
-                <p>List of all the products...</p>
-                <% if(prods.length> 0) { %>
-                    <div class="grid">
-                        <% for (let product of prods){ %>
-                            <article class="card product-item">
-                                <header class="card__header">
-                                    <h1 class="product__title">
-                                        <%= product.title %>
-                                    </h1>
-                                </header>
-                                <div class="card__image">
-                                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
-                                </div>
-                                <div class="card__content">
-                                    <h2 class="product__price">
-                                        $<%= product.price %>
-                                    </h2>
-                                    <p class="product__description">
-                                        <%= product.description %>
-                                    </p>
-                                </div>
-                                <div class="card__actions">
-                                    <a href="/product/<%= product._id %>" class="btn">Details</a>
-                                </div>
-                            </article>
-                            <% } %>
+                <% if (errorMessage.length> 0) { %>
+                    <div class="user-message user-message--error">
+                        <%= errorMessage %>
                     </div>
-                    <% } else { %>
-                        <h1>No item in shop yet!</h1>
-                        <% } %>
+                    <% } %>
+                        <h1>Products available in shop.</h1>
+                        <p>List of all the products...</p>
+                        <% if(prods.length> 0) { %>
+                            <div class="grid">
+                                <% for (let product of prods){ %>
+                                    <article class="card product-item">
+                                        <header class="card__header">
+                                            <h1 class="product__title">
+                                                <%= product.title %>
+                                            </h1>
+                                        </header>
+                                        <div class="card__image">
+                                            <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                                        </div>
+                                        <div class="card__content">
+                                            <h2 class="product__price">
+                                                $<%= product.price %>
+                                            </h2>
+                                            <p class="product__description">
+                                                <%= product.description %>
+                                            </p>
+                                        </div>
+                                        <div class="card__actions">
+                                            <a href="/product/<%= product._id %>" class="btn">Details</a>
+                                        </div>
+                                    </article>
+                                    <% } %>
+                            </div>
+                            <% } else { %>
+                                <h1>No item in shop yet!</h1>
+                                <% } %>
             </main>
     </body>
 
